Finished the introduction and started the code setup

--- a/latex_report/report_operational_research.tex
+++ b/latex_report/report_operational_research.tex
@@ -7,6 +7,8 @@
 \usepackage{setspace}
 \usepackage{graphicx}
 \usepackage{notoccite} %citation number ordering
+\usepackage{amsmath}
+\numberwithin{equation}{section}
 \usepackage{lscape} %landscape table
 \usepackage{caption} %add a newline in the table caption
 
@@ -36,4 +38,5 @@
 	\pagenumbering{arabic} % Start roman numbering
 	
 	\input{sections/introduction}
+	\input{sections/setup}
 \end{document}
