Added CPLEX environment section

--- a/latex_report/report_operational_research.tex
+++ b/latex_report/report_operational_research.tex
@@ -11,6 +11,8 @@
 \numberwithin{equation}{section}
 \usepackage{lscape} %landscape table
 \usepackage{caption} %add a newline in the table caption
+\usepackage{hyperref}
+\usepackage{listings}
 
 \title{\huge{\textbf{Progress Report}} \\
 \LARGE{Operational Reseach 2}}
