--- a/latex_report/sections/introduction.tex
+++ b/latex_report/sections/introduction.tex
@@ -14,7 +14,7 @@ Matematically the problem is the following.  We start numbering all the cities t
 	\end{cases}
 \end{equation}
 
-Now we can describe the entire problem:
+Now we can describe the first formulation of the problem:
 
 \begin{equation}
 	\label{eqn:cost}
@@ -34,15 +34,16 @@ Now we can describe the entire problem:
 	\tag{{\theequation}c}
 \end{equation}
 
-\begin{equation}
-	\label{eqn:ragg}
-	\sum_{(i,j)\delta^+(S)}x_{ij}\ge 1, \quad S \subset V\quad:\quad 1\in S
-	\tag{{\theequation}d}
-\end{equation}
+%\begin{equation}
+%	\label{eqn:ragg}
+%	\sum_{(i,j)\delta^+(S)}x_{ij}\ge 1, \quad S \subset V\quad:\quad 1\in S
+%	\tag{{\theequation}d}
+%\end{equation}
 
 \begin{equation}
 	x_{ij}\ge 0 \; \text{intero} , \quad (i, j) \in A
 	\tag{{\theequation}e}
 \end{equation}
 
-In these equations we use the value $c_{ij}$ as the cost of the path from the node $i$ to the node $j$. The equations \ref{eqn:in} and \ref{eqn:out} lead to the fact that each node must have only one arc incoming and one arc outgoing. The formula \ref{eqn:ragg} is needed to avoid solutions not connected and force each node to be reachable from the first node.
+In these equations we use the value $c_{ij}$ as the cost of the path from the node $i$ to the node $j$. The equations \ref{eqn:in} and \ref{eqn:out} lead to the fact that each node must have only one arc incoming and one arc outgoing. 
+%The formula \ref{eqn:ragg} is needed to avoid solutions not connected and force each node to be reachable from the first node.
