Added section for the MTZ model

--- a/latex_report/report_operational_research.tex
+++ b/latex_report/report_operational_research.tex
@@ -20,6 +20,7 @@
 \date{August 2021}
 
 \begin{document}
+	
 	\pagenumbering{roman} % Start roman numbering
 	\clearpage\maketitle
 	\thispagestyle{empty}
@@ -42,4 +43,5 @@
 	\input{sections/introduction}
 	\input{sections/setup}
 	\input{sections/solutions}
+	\bibliography{bibliography}
 \end{document}
