Added sections for the callbacks

--- a/latex_report/report_operational_research.tex
+++ b/latex_report/report_operational_research.tex
@@ -43,5 +43,6 @@
 	\input{sections/introduction}
 	\input{sections/setup}
 	\input{sections/solutions}
-	\bibliography{bibliography}
+	\input{sections/callback}
+	%\bibliography{bibliography}
 \end{document}
