--- a/latex_report/sections/setup.tex
+++ b/latex_report/sections/setup.tex
@@ -1,4 +1,5 @@
 \section{Code setup}
+\label{sec:setup}
 In order to implement the models to be solved we decided to use the common and powerful tool \href{https://www.ibm.com/products/ilog-cplex-optimization-studio}{IBM CPLEX}. Usually this software isn't free but due the academic usage it was made available for all the students that needed it.\\
 CPLEX allow its user to decide which programming language to use between Python and C; in this project we used C.
 
@@ -68,3 +69,7 @@ Before seeing this method in detail we will explain how CPLEX reference to the r
 \end{lstlisting}
 
 Now that we have introduced the code setup and how the models are built we can start by examinating the variuos methods that we have use to solve the TSP optimization problem.
+
+\subsection{Solution and data management}
+\label{sec:sol_management}
+QUA SCRIVO DI COME HO GESTITO LE COMP E I VALORI DELLE SOLUZIONI
