Started section of heuristics

--- a/latex_report/report_operational_research.tex
+++ b/latex_report/report_operational_research.tex
@@ -11,6 +11,7 @@
 \numberwithin{equation}{section}
 \usepackage{lscape} %landscape table
 \usepackage{caption} %add a newline in the table caption
+\usepackage{subcaption}
 \usepackage{hyperref}
 \usepackage{listings}
 
@@ -44,5 +45,6 @@
 	\input{sections/setup}
 	\input{sections/solutions}
 	\input{sections/callback}
+	\input{sections/euristics}
 	%\bibliography{bibliography}
 \end{document}
